About us text overlap fix + background

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -45,8 +45,7 @@
     font-size: 13px;
     color: #545454;
     line-height: 20px;
-    text-align: justify;
-    margin-bottom: -20px;   
+    text-align: justify; 
 }
 
 .text2 {
